# NuandRFProyect

./: .gitignore  README.md  framework.sh  generatewave.m  load_csv.m  octave-workspace  raw.csv  run_docker.sh  sampling_rate_report_tx.ods  workspace.code-workspace
Documentation/: #Documentation.lyx#  Documentation.lyx  Documentation.lyx~  GUIoverwiew.graphml  Linux_overview.graphml
Documentation/data_captured/: sampling_rate_report_tx.ods
FPGA_FW/: README.md  framework.sh  notes  serv_req_info.txt
FPGA_FW/dupinSoC/fw/ad9361_project/: makefile
FPGA_FW/dupinSoC/fw/spi/: makefile
FPGA_FW/dupinSoC/hdl/: README.md
FPGA_FW/dupin_IDE/coprocessorInt/: core  default.ld  platformio.ini
FPGA_FW/dupin_IDE/coprocessorInt/doc/: dupin.lyx
FPGA_FW/dupin_IDE/coprocessorInt/include/: apb3stub.h  dupin.h  i2c.h  i2c_device.h  interrupt_port.h  io.h  soc.dts  soc.h  spi.h  type.h
FPGA_FW/dupin_IDE/coprocessorInt/src/: main.c  plic_metal.c  plic_metal.h
FPGA_FW/openOCD/: Makefile  Makefile.in  README.md  aclocal.m4  config.h  config.status  configure  libtool  log
FPGA_FW/openOCD/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
FPGA_FW/openOCD/doc/: openocd.info  openocd.info-1  openocd.info-2  stamp-vti
FPGA_FW/openOCD/src/.deps/: libopenocd_la-hello.Plo  libopenocd_la-openocd.Plo  main.Po
FPGA_FW/test_results/: Capture.odt
FirmwareDev/: platformio.ini
FirmwareDev/include/: gpio.h  machineTimer.h  noc.h  plic.h  riscv.h  uart.h
FirmwareDev/share/config/: dupin_s.cfg
FirmwareDev/src/platform_generic/: platform.c
GUITEST/Linux_GUI/QT_cmake/: QtDesigner  QtDesigner.pro  app.h  my_mainwindow.cpp  notes.txt  sample.h
GUITEST/Linux_GUI/SingnalTest/: MyDlg.cpp  MyDlg.h  SingnalTest
GUITEST/Project/: CMakeLists.txt  main.cpp  notes.txt
GUITEST/Project/QT_cmake/: CMakeLists.txt  Makefile  moc_my_mainwindow.cpp  my_mainwindow.cpp  my_mainwindow.h  qrc_logo.cpp
GUITEST/Project/SingnalTest/: Makefile  SingnalTest.pro  main.cpp  moc_MyDlg.cpp
GUITEST/QtDesigner/: Frameworkhelp.ui  Makefile  QtDesigner  QtDesigner.pro  main.cpp  moc_my_mainwindow.cpp  my_mainwindow.cpp  my_mainwindow.h  notes.txt  sample.h  ui_Frameworkhelp.h
GUITEST/StandAlone/: QtDesigner.pro  my_mainwindow.h  ui_Frameworkhelp.h
GUITEST/Windows_GUI/Project/: CMakeLists.txt  Readme.md  fir_config.txt  main.cpp  pathclocks.txt  rx_fast_load.txt  writefir.txt.txt
GUITEST/Windows_GUI/Project/Bridge/: CMakeLists.txt  COM_finder.cpp  COM_finder.h  bridge.cpp  bridge.h  id00001001.csv  id00004001.csv
GUITEST/Windows_GUI/Project/Menu_Backend/: Bridge_broker.cpp  CMakeLists.txt  Input_text.cpp  Load_File  Load_File.cpp  Sci_units.cpp  a.out
GUITEST/Windows_GUI/Project/QT_cmake/: CMakeLists.txt  Frameworkhelp.ui  Makefile  Makefile.Debug  Makefile.Release  app.cpp  logo.qrc  my_mainwindow.cpp  my_mainwindow.h  sample.h
GUITEST/Windows_GUI/build-Project-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
GUITEST/Windows_GUI/build-Project-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/Bridge/: cmake_install.cmake
GUITEST/Windows_GUI/build-Project-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/Menu_Backend/: cmake_install.cmake
GUITEST/Windows_GUI/build-Project-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/QT_cmake/: cmake_install.cmake
GUITEST/Windows_GUI/build-Project-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/Tolteca_autogen/: deps
GUITEST/opcode/: classify.cpp  classify.h  main.cpp
Installers/: 37-usbblaster.rules  60-openocd.rules  Install.md
Nuand_Blade_Base/: .gitignore  CMakeLists.txt
Nuand_Blade_Base/fpga_common/src/: ad936x_helpers.c
Nuand_Blade_Base/host/samples/: rx.csv
Nuand_Blade_Base/host/utilities/bladeRF-cli/: CMakeLists.txt
data_captured/: rx.csv  rx_56Mhz_BW.csv  tx.csv
host/: CMakeLists.txt  notes  samplingrate.ods
host/libraries/libbladeRF/src/: bladerf.c
host/utilities/bladeRF-cli/src/: main.c
opcode/: a.out  classify.cpp  functions.txt
(+254 files in other folders)
